// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInScreen Snapshots should match snapshot with empty form 1`] = `
<View
  className="flex-1 bg-white"
>
  <View
    className="flex-1 px-6"
    style={
      {
        "paddingTop": 60,
      }
    }
  >
    <Text
      className="mb-2 text-[32px] font-extrabold tracking-tight text-stone-800"
    >
      Welcome back
    </Text>
    <Text
      className="mb-10 text-base text-stone-500"
    >
      Sign in to continue your streak
    </Text>
    <View
      className="gap-3"
    >
      <View
        accessibilityHint="Sign in using your Apple account"
        accessibilityLabel="Continue with Apple"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          />
        </View>
        <Text
          className="text-[15px] font-semibold text-white"
        >
          Continue with Apple
        </Text>
      </View>
      <View
        accessibilityHint="Sign in using your Google account"
        accessibilityLabel="Continue with Google"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          >
            🔵
          </Text>
        </View>
        <Text
          className="text-[15px] font-semibold text-stone-800"
        >
          Continue with Google
        </Text>
      </View>
    </View>
    <View
      className="my-6 flex-row items-center"
    >
      <View
        className="h-px flex-1 bg-stone-200"
      />
      <Text
        className="mx-4 text-xs font-medium tracking-widest text-stone-500"
      >
        or
      </Text>
      <View
        className="h-px flex-1 bg-stone-200"
      />
    </View>
    <View
      className="gap-6"
    >
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Email
          </Text>
        </View>
        <TextInput
          autoCapitalize="none"
          autoComplete="email"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Enter your email"
          placeholderTextColor="#94a3b8"
          value=""
        />
      </View>
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Password
          </Text>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              className="text-xs font-medium text-emerald-700"
            >
              Forgot?
            </Text>
          </View>
        </View>
        <TextInput
          autoComplete="password"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Enter your password"
          placeholderTextColor="#94a3b8"
          secureTextEntry={true}
          value=""
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-[15px] font-semibold tracking-[3px] text-white"
        >
          SIGN IN
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SignInScreen Snapshots should match snapshot with navigation callback 1`] = `
<View
  className="flex-1 bg-white"
>
  <View
    className="flex-1 px-6"
    style={
      {
        "paddingTop": 60,
      }
    }
  >
    <Text
      className="mb-2 text-[32px] font-extrabold tracking-tight text-stone-800"
    >
      Welcome back
    </Text>
    <Text
      className="mb-10 text-base text-stone-500"
    >
      Sign in to continue your streak
    </Text>
    <View
      className="gap-3"
    >
      <View
        accessibilityHint="Sign in using your Apple account"
        accessibilityLabel="Continue with Apple"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          />
        </View>
        <Text
          className="text-[15px] font-semibold text-white"
        >
          Continue with Apple
        </Text>
      </View>
      <View
        accessibilityHint="Sign in using your Google account"
        accessibilityLabel="Continue with Google"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          >
            🔵
          </Text>
        </View>
        <Text
          className="text-[15px] font-semibold text-stone-800"
        >
          Continue with Google
        </Text>
      </View>
    </View>
    <View
      className="my-6 flex-row items-center"
    >
      <View
        className="h-px flex-1 bg-stone-200"
      />
      <Text
        className="mx-4 text-xs font-medium tracking-widest text-stone-500"
      >
        or
      </Text>
      <View
        className="h-px flex-1 bg-stone-200"
      />
    </View>
    <View
      className="gap-6"
    >
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Email
          </Text>
        </View>
        <TextInput
          autoCapitalize="none"
          autoComplete="email"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Enter your email"
          placeholderTextColor="#94a3b8"
          value=""
        />
      </View>
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Password
          </Text>
          <View
            accessibilityLabel="Forgot password?"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              className="text-xs font-medium text-emerald-700"
            >
              Forgot?
            </Text>
          </View>
        </View>
        <TextInput
          autoComplete="password"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Enter your password"
          placeholderTextColor="#94a3b8"
          secureTextEntry={true}
          value=""
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-[15px] font-semibold tracking-[3px] text-white"
        >
          SIGN IN
        </Text>
      </View>
    </View>
    <View
      className="mt-6 flex-row items-center justify-center"
    >
      <Text
        className="text-sm text-stone-500"
      >
        Don't have an account? 
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-sm font-semibold text-emerald-700"
        >
          Sign up
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SignUpScreen Snapshots should match snapshot with empty form 1`] = `
<View
  className="flex-1 bg-white"
>
  <View
    className="flex-1 px-6"
    style={
      {
        "paddingTop": 60,
      }
    }
  >
    <View>
      <Text
        className="mb-2 text-[32px] font-extrabold tracking-tight text-stone-800"
      >
        Create account
      </Text>
      <Text
        className="mb-10 text-base text-stone-500"
      >
        Start your habit journey today
      </Text>
    </View>
    <View
      className="gap-3"
    >
      <View
        accessibilityHint="Sign in using your Apple account"
        accessibilityLabel="Continue with Apple"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          />
        </View>
        <Text
          className="text-[15px] font-semibold text-white"
        >
          Continue with Apple
        </Text>
      </View>
      <View
        accessibilityHint="Sign in using your Google account"
        accessibilityLabel="Continue with Google"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          >
            🔵
          </Text>
        </View>
        <Text
          className="text-[15px] font-semibold text-stone-800"
        >
          Continue with Google
        </Text>
      </View>
    </View>
    <View
      className="my-6 flex-row items-center"
    >
      <View
        className="h-px flex-1 bg-stone-200"
      />
      <Text
        className="mx-4 text-xs font-medium tracking-widest text-stone-500"
      >
        or
      </Text>
      <View
        className="h-px flex-1 bg-stone-200"
      />
    </View>
    <View
      className="gap-6"
    >
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Email
          </Text>
        </View>
        <TextInput
          autoCapitalize="none"
          autoComplete="email"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Enter your email"
          placeholderTextColor="#94a3b8"
          value=""
        />
      </View>
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Password
          </Text>
        </View>
        <TextInput
          autoComplete="password-new"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Create a password"
          placeholderTextColor="#94a3b8"
          secureTextEntry={true}
          value=""
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-[15px] font-semibold tracking-[3px] text-white"
        >
          CREATE ACCOUNT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SignUpScreen Snapshots should match snapshot with navigation callback 1`] = `
<View
  className="flex-1 bg-white"
>
  <View
    className="flex-1 px-6"
    style={
      {
        "paddingTop": 60,
      }
    }
  >
    <View>
      <Text
        className="mb-2 text-[32px] font-extrabold tracking-tight text-stone-800"
      >
        Create account
      </Text>
      <Text
        className="mb-10 text-base text-stone-500"
      >
        Start your habit journey today
      </Text>
    </View>
    <View
      className="gap-3"
    >
      <View
        accessibilityHint="Sign in using your Apple account"
        accessibilityLabel="Continue with Apple"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          />
        </View>
        <Text
          className="text-[15px] font-semibold text-white"
        >
          Continue with Apple
        </Text>
      </View>
      <View
        accessibilityHint="Sign in using your Google account"
        accessibilityLabel="Continue with Google"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          >
            🔵
          </Text>
        </View>
        <Text
          className="text-[15px] font-semibold text-stone-800"
        >
          Continue with Google
        </Text>
      </View>
    </View>
    <View
      className="my-6 flex-row items-center"
    >
      <View
        className="h-px flex-1 bg-stone-200"
      />
      <Text
        className="mx-4 text-xs font-medium tracking-widest text-stone-500"
      >
        or
      </Text>
      <View
        className="h-px flex-1 bg-stone-200"
      />
    </View>
    <View
      className="gap-6"
    >
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Email
          </Text>
        </View>
        <TextInput
          autoCapitalize="none"
          autoComplete="email"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Enter your email"
          placeholderTextColor="#94a3b8"
          value=""
        />
      </View>
      <View
        className="gap-2"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            className="text-xs font-medium tracking-wide text-stone-500"
          >
            Password
          </Text>
        </View>
        <TextInput
          autoComplete="password-new"
          className="rounded-xl border px-5 py-3.5 text-base font-medium text-stone-900 border-stone-200 bg-stone-50"
          editable={true}
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          placeholder="Create a password"
          placeholderTextColor="#94a3b8"
          secureTextEntry={true}
          value=""
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-[15px] font-semibold tracking-[3px] text-white"
        >
          CREATE ACCOUNT
        </Text>
      </View>
    </View>
    <View
      className="flex-row items-center justify-center mt-6"
    >
      <Text
        className="text-sm text-stone-500"
      >
        Already have an account? 
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-sm font-semibold text-emerald-700"
        >
          Sign in
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WelcomeScreen Snapshots should match snapshot in welcome mode 1`] = `
<View
  colors={
    [
      "#fafaf9",
      "#ffffff",
    ]
  }
  end={
    {
      "x": 0,
      "y": 1,
    }
  }
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "flex": 1,
    }
  }
  testID="linear-gradient"
>
  <View
    className="flex-1 justify-between px-6 pb-[60px] pt-[100px]"
  >
    <View
      className="items-center gap-4"
    >
      <View
        accessibilityLabel="Daily Habits Logo"
        accessibilityRole="image"
        accessible={true}
        className="mb-4"
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              },
              {
                "borderRadius": 24,
                "elevation": 8,
                "height": 80,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 4,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 8,
                "width": 80,
              },
            ]
          }
        >
          <View
            colors={
              [
                "#059669",
                "#10b981",
                "#34d399",
              ]
            }
            end={
              {
                "x": 1,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "alignItems": "center",
                "borderRadius": 24,
                "height": 80,
                "justifyContent": "center",
                "width": 80,
              }
            }
            testID="linear-gradient"
          >
            <View
              color="white"
              size={40}
              strokeWidth={3}
              testID="lucide-icon-Check"
            />
          </View>
        </View>
      </View>
      <Text
        className="text-center text-[40px] font-extrabold tracking-tight text-stone-800"
      >
        Daily Habits
      </Text>
      <Text
        className="text-center text-lg leading-7 text-stone-500"
      >
        Build lasting habits with science-backed techniques
      </Text>
      <View
        accessibilityLabel="10,000+ habits tracked"
        accessibilityRole="text"
        accessible={true}
      >
        <View
          colors={
            [
              "#fef3c7",
              "#fde68a",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "alignItems": "center",
              "borderRadius": 20,
              "flexDirection": "row",
              "gap": 6,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
          testID="linear-gradient"
        >
          <View
            color="#d97706"
            fill="#d97706"
            size={16}
            testID="lucide-icon-Star"
          />
          <Text
            style={
              {
                "color": "#92400e",
                "fontSize": 14,
                "fontWeight": "600",
              }
            }
          >
            10,000+ habits tracked
          </Text>
        </View>
      </View>
    </View>
    <View
      className="gap-3"
    >
      <View
        accessibilityHint="Sign in using your Apple account"
        accessibilityLabel="Continue with Apple"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          />
        </View>
        <Text
          className="text-[15px] font-semibold text-white"
        >
          Continue with Apple
        </Text>
      </View>
      <View
        accessibilityHint="Sign in using your Google account"
        accessibilityLabel="Continue with Google"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          className="mr-2 h-5 w-5 items-center justify-center"
        >
          <Text
            className="text-lg"
          >
            🔵
          </Text>
        </View>
        <Text
          className="text-[15px] font-semibold text-stone-800"
        >
          Continue with Google
        </Text>
      </View>
      <View
        className="my-6 flex-row items-center"
      >
        <View
          className="h-px flex-1 bg-stone-200"
        />
        <Text
          className="mx-4 text-xs font-medium tracking-widest text-stone-500"
        >
          or
        </Text>
        <View
          className="h-px flex-1 bg-stone-200"
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          className="text-[15px] font-semibold text-white"
        >
          Continue with Email
        </Text>
      </View>
      <View
        className="flex-row items-center justify-center mt-2"
      >
        <Text
          className="text-sm text-stone-500"
        >
          Already have an account? 
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            className="text-sm font-semibold text-emerald-700"
          >
            Sign in
          </Text>
        </View>
      </View>
      <View
        className="mt-4"
      >
        <View
          className="flex-row items-center justify-center"
        >
          <View
            accessibilityLabel="Terms of Service"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              className="text-xs text-stone-500"
            >
              Terms
            </Text>
          </View>
          <Text
            className="mx-2 text-xs text-stone-500"
          >
            ·
          </Text>
          <View
            accessibilityLabel="Privacy Policy"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              className="text-xs text-stone-500"
            >
              Privacy
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
